fix bug 160000 - custom.jar support for chrome look for custom.jar in the chrome directory - if found, always check it first for files before using the rest of the chrome registry. This allows embeddors to override specific chrome URLs with their own files. sr=hyatt, r=chak